# pgadmin-qt

./: CMakeLists.txt  LICENSE  README.md  connectiondialog.cpp  connectiondialog.ui  enums.h  main.cpp  objectbrowser.cpp  objectbrowser.h  pgadmin-qt.pro  pgadmin.cpp  pgadmin.h  pgadmin.qrc  pgadmin.ui  pgconnection.cpp  pgconnection.h  pgdatabase.cpp  pgdatabase.h  pggroup.cpp  pggroup.h  pgobject.cpp  pgobject.h  pgserver.cpp  pgserver.h  pgset.cpp  pgset.h  pgtablespace.cpp  pgtablespace.h  pguser.cpp  pguser.h  propertytable.cpp  propertytable.h
db/: pgconnection.cpp  pgproperties.cpp  pgset.cpp
dialog/: connectiondialog.cpp  connectiondialog.ui
form/: pgadmin.cpp
include/: enums.h  includes.h  settings.h
include/db/: pgconnection.h  pgproperties.h  pgset.h
include/dialog/: connectiondialog.h
include/form/: pgadmin.h
include/schema/: pgaccessmethod.h  pgcast.h  pgcollation.h  pgconversion.h  pgdatabase.h  pgeventtrigger.h  pgextension.h  pgforeigndatawrapper.h  pgforeignserver.h  pggroup.h  pglanguage.h  pgobject.h  pgoperator.h  pgrole.h  pgschema.h  pgserver.h  pgtablespace.h  pgtextsearchconfiguration.h  pgtextsearchdictionary.h  pgtextsearchparser.h  pgtextsearchtemplate.h  pguser.h  pgusermapping.h
include/widget/: objectbrowser.h  propertytable.h
resources/: pgadmin.qrc
resources/img/: .directory
schema/: pgaccessmethod.cpp  pgcast.cpp  pgcollation.cpp  pgconversion.cpp  pgdatabase.cpp  pgeventtrigger.cpp  pgextension.cpp  pgforeigndatawrapper.cpp  pgforeignserver.cpp  pggroup.cpp  pglanguage.cpp  pgobject.cpp  pgoperator.cpp  pgrole.cpp  pgschema.cpp  pgserver.cpp  pgtablespace.cpp  pgtextsearchconfiguration.cpp  pgtextsearchdictionary.cpp  pgtextsearchparser.cpp  pgtextsearchtemplate.cpp  pguser.cpp  pgusermapping.cpp
ui/: pgadmin.ui
widget/: objectbrowser.cpp  propertytable.cpp
